GNOME Bugzilla – Bug 732707
v4l2object: Assert with fakesink
Last modified: 2016-12-19 06:32:26 UTC
Following pipeline would lead to assertion on NULL pool: gst-launch-1.0 filesrc location=... ! qtdemux ! h264parse ! v4l2video8dec ! fakesink (gst-launch-1.0:17083): GStreamer-CRITICAL **: gst_buffer_pool_get_config: assertion 'GST_IS_BUFFER_POOL (pool)' failed (gst-launch-1.0:17083): GStreamer-CRITICAL **: gst_buffer_pool_config_get_params: assertion 'config != NULL' failed (gst-launch-1.0:17083): GStreamer-CRITICAL **: gst_structure_free: assertion 'structure != NULL' failed This is because if special stride is needed and downstream don't have VideoMeta support, we let the baseclass create a generic pool to copy to. Patch coming.
commit 0126e756769b9af7d8309eb582c11ea249434f3e Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Thu Jul 3 15:21:18 2014 -0400 v4l2object: Pool might be NULL in decide allocation If special stride is needed and downstream don't support VideoMeta, pool might be NULL in order to let the baseclass create a generic pool. This would lead to assertion with on Exynos with: gst-launch-1.0 -v filesrc location=mov ! qtdemux ! h264parse ! \ v4l2video8dec ! fakesink https://bugzilla.gnome.org/show_bug.cgi?id=732707